@@ -1,4 +1,7 @@
--Xms512m
--Xmx2g
+-Xms1g
+-Xmx4g
 -XX:+UseZGC
+-XX:+ZGenerational
+-XX:+UseCompactObjectHeaders
+-XX:+UseStringDeduplication
 --enable-preview
